# mlog-module

./: .clang-format  .git-branch-marker  .gitignore  API.md  CLAUDE.md  CMakeLists.txt  README.md
.agents/skills/mlog-serial-control/: SKILL.md
.agents/skills/mlog-serial-control/agents/: openai.yaml
examples/baremetal_minimal/: main.c  mlog_port_minimal.c
inc/: mlog.h  mlog_cfg.h
port/: mlog_port.c  mlog_port_uart.c
src/: mlog.c  mlog_buf.c  mlog_utils.c
tools/: mlog_scan.py  mlog_serial_logger.py
